--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -7,7 +7,6 @@ output:
     includes:
       in_header: lib/styles.sty
     latex_engine: xelatex
-runtime: shiny
 ---
 
 ```{r setup, echo=FALSE, results='hide', message=FALSE, warning=FALSE}
@@ -128,5 +127,5 @@ ggplot(inner_join(obcine, data.frame(obcina=names(skupine),
 ***
 
 ```{r shiny, echo=FALSE}
-shinyAppDir("shiny", options=list(width="100%", height=600))
+#shinyAppDir("shiny", options=list(width="100%", height=600))
 ```
