--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -25,10 +25,7 @@ source("lib/rstudio.r", encoding="UTF-8")
 
 # Tema 
 
-Izbrala sem si temo o transportu. Pri tem bom primerjala transport dobrin in ljudi v železniškem, pristaniški in letalski promet, pri transportu dobrin pa tudi cestni promet. Kot prvo se bom osredotočila na uvoz. Želim ugotoviti s katerim prometom pridobimo največ dobrin oziroma kako ljudje najpogosteje prihajajo v našo državo. Potem bom analizirala izvoz dobrin in ljudi, enako kot prej po panogah. Za konec bom primerjala uvoz in izvoz, želim ugotoviti koliko je Slovenija skozi leta postala samooskrbna država. Transport z vlakom bom primerjala še z drugimi evropskimi državami od leta 2010 do 2018 in podatke prikazala z grafom. 
-
-
-
+Izbrala sem si temo o transportu. Pri tem bom primerjala transport dobrin in ljudi v železniškem, pristaniškem in letalskem prometu, pri transportu dobrin pa tudi cestni promet. Kot prvo se bom osredotočila na uvoz. Želim ugotoviti s katerim prometom pridobimo največ dobrin oziroma kako ljudje najpogosteje prihajajo v našo državo. Potem bom analizirala izvoz dobrin in ljudi, enako kot prej po panogah. Za konec bom primerjala uvoz in izvoz, želim ugotoviti koliko je Slovenija skozi leta postala samooskrbna država. Transport z vlakom bom primerjala še z drugimi evropskimi državami od leta 2010 do 2018 in podatke prikazala z grafom. 
 
 ***
 
@@ -38,36 +35,35 @@ Izbrala sem si temo o transportu. Pri tem bom primerjala transport dobrin in lju
 source("uvoz/uvoz.r", encoding="UTF-8")
 ```
 
-Uvozili smo podatke o transportu v obliki CSV s statističnega urada. Podatke imamo v 
+Uvozila sem podatke o transportu v obliki CSV s Statističnega urada in Evrostata. Podatke imamo v 
 5 razpredelnicah v obliki *tidy data*.
   
 Tabela 1: Letalski potniški in blagovni promet
 
   - `leto` - spremenljivka: leto (število),
-  - `mesec` - spremenljivka: mesec (število),
-  - `prihod/odhod letal` - spremenljivka: prihod letal in odhod letal iz Slovenije (neurejen faktor),
+  - `tovor` - spremenljivka: prihod letal(uvoz) in odhod letal(izvoz) iz Slovenije (neurejen faktor),
   - `potniki` - meritev: stevilo potnikov v 1000 (stevilo),
-  - `tone` - meritev: količina blaga, ki je prišlo v oz. iz Sloveinije v tonah (število).
+  - `tone` - meritev: količina blaga, ki je prišlo v oz. iz Sloveinije v tonah (1000) (število).
   
 Tabela 2: Zeležniški potniški in blagovni promet
 
   - `leto` - spremenljivka: leto (število),
-  - `transport ` - spremenljivka: uvoz in izvoz blaga in ljudi (neurejen faktor),
-  - `tone` - meritev: količina blaga v tonah (število),
+  - `tovor ` - spremenljivka: uvoz in izvoz blaga in ljudi (neurejen faktor),
+  - `tone` - meritev: količina blaga v tonah (1000) (število),
   - `potniki` - meritev: stevilo potnikov v 1000 (stevilo).
   
 Tabela 3: Cestni blagovni promet
 
   - `leto` - spremenljivka: leto (število),
-  - `transport` - spremenljivka: uvoz izvoz blaga in ljudi (neurejen faktor),
-  - `tone` - meritev: količina blaga v tonah (število).
+  - `tovor` - spremenljivka: uvoz izvoz blaga (neurejen faktor),
+  - `tone` - meritev: količina blaga v tonah (1000) (število).
   
 Tabela 4: Pristaniški potniški in blagovni promet
 
   - `leto` - spremenljivka: leto (število),
-  - `transport` - spremenljivka: uvoz in izvoz blaga in ljudi (neurejen faktor),
+  - `tovor` - spremenljivka: uvoz in izvoz blaga in ljudi (neurejen faktor),
   - `potniki` - meritev: stevilo potnikov v 1000 (stevilo),
-  - `tone` - meritev: količina blaga v tonah (število).
+  - `tone` - meritev: količina blaga v tonah (1000)(število).
 
 Tabela 5: Železniški potniški in blagovni promet v primerjavi z drugimi evropskimi državami 
 
@@ -81,7 +77,7 @@ Tabela 5: Železniški potniški in blagovni promet v primerjavi z drugimi evrop
 **Opomba**: da bi razpredelnica `obcine` res bila v obliki *tidy data*, bi morali odstraniti stolpec `gostota` (saj je izpeljan iz stolpcev `povrsina` in `prebivalci`), podatke o pokrajinah pa bi morali premakniti v drugo razpredelnico, saj nekatere občine pripadajo dvema pokrajinama. Podobno bi morali narediti tudi s stolpcem `odcepitev`.
 
 
-**Cilj**: Želim ugotoviti kako se je spreminjal transport glede na časovno obdobje med 2010 in 2018 in s tem tudi kateri transport se je z leti okrepčal.Predvidevam, da bo največ uvoženega blaga prišlo s cestnim transportom, medtem ko ljudi z letalskim. Pri izvozu pa pričakujem podobno sliko. 
+**Cilj**: Želim ugotoviti kako se je spreminjal transport glede na časovno obdobje med 2010 in 2018 in s tem tudi kateri transport se je z leti okrepčal. Predvidevam, da bo največ uvoženega blaga prišlo s cestnim prometom, medtem ko ljudi z letalskim. Pri izvozu pa pričakujem podobno sliko. 
 
 
 
@@ -93,7 +89,7 @@ Tabela 5: Železniški potniški in blagovni promet v primerjavi z drugimi evrop
 source("vizualizacija/vizualizacija.r", encoding="UTF-8")
 ```
 
-Spodni grafi prikazuje uvoz in izvoz blaga ter ljudi v 
+Spodnji grafi prikazujejo uvoz in izvoz blaga ter ljudi v različnih panogah. 
 
 ```{r graf_uvoz_blago, echo=FALSE, message=FALSE, fig.align='center', warning = FALSE}
 print(graf_uvoz_blago)
@@ -103,7 +99,9 @@ print(graf_uvoz_blago)
 ```{r graf_izvoz_blago, echo=FALSE, message=FALSE, fig.align='center', warning = FALSE}
 print(graf_izvoz_blago)
 ```
-
+Največji transport blaga je v cestnem prometu. Predvidevamo da zaradi tega, ker je cestni promet najbolj prilagodljiv naravnim razmeram, je neodvisen in zaseben uporabnikom ter predvsem omogoča hitro dostavo blaga. Kar pomeni da je blago do končnega uporabnika pripeljan najbolj optimalno. 
+Veliko vlogo pri transportu pa ima tudi železniški promet. Ima kar veliko prednosti. Na primer prepeljemo lahko veliko količino blaga nenkrat, zaradi zastojev na cesti in nepredvidljivih razmer je ponavadi tudi hitrejši in varnejši, vendar ima eno veliko pomankljivost in to je dostopnost. V Sloveniji imamo 33 krat manj železniških omrežji kot v cestnem prometu, iz katerega sledi da je železniški promet v slabem izkoristku. 
+Če pogledamo še pristaniški in letalski promet, pa so številke veliko manjše. Glede na to, da imamo tako pristanišče kot letališče samo eno in v primerjavi z ostalimi evropskimi državami veliko manjše so take razlike pričakovane. 
 
 ```{r graf_uvoz_potnikov, echo=FALSE, message=FALSE, fig.align='center', warning = FALSE}
 print(graf_uvoz_potnikov)
@@ -114,31 +112,35 @@ print(graf_uvoz_potnikov)
 print(graf_izvoz_potnikov)
 ```
 
-Kot je očitno pri vseh grafih močno prevladuje letalski promet. Zanimivo je da že od leta 2010, se večinoma oskrbujemo z letalskim prometom čeprav takrat še letalstvo kot samo ni bilo tako razvito. Pri izvozu potnikov pa je še posebaj očitna rast skozi leta. Zaradi modernizacije, nižanja cen letalskih kart ter večje dostopnosti v sosednje države, je ta rast pričakovana.
-
-Zaradi boljše preglednosti, sem v naslednjih grafih izuzela letalski promet. 
-
+Vodilno vlogo pri transportu potnikov ima letalski promet. V zadnjih letih se je njegov pomen zelo povečal. Letalske karte postajajo vse bolj poceni, dostopnost v druge države je enostavnejša, hitrejša, zaradi interneta je iskanje nastanitev priročno in poceni, in zato se ljudje vse več odločajo za potovanje okoli sveta. 
+Glede na to da podatkov za uvoz in izvoz ljudi za cestni promet nimam, predvidevam da je bil v preteklih letih nad letalskim prometom. Vendar ker potovanje z avtom postaja dražje in predvsem bolj zamudno, mislim da se bo ta trend v prihodnjih letih spremenil. 
 
 
 
-Kot drugo analizo pa gledam železniški transport v drugih evropskih mestih. 
 
-Spodnja grafa predstavljata povprečen transport ljudi in blaga od leta 2010 do 2018. 
+Kot drugo analizo pa primerjam železniški transport z drugimi Evropskimi državami.
+
+Spodnja grafa prikazujeta povprečen transport ljudi in blaga od leta 2010 do 2018. 
 
 ```{r graf_evropa, echo=FALSE, message=FALSE, fig.align='center', warning = FALSE}
 print(graf_evropa)
 ```
 
-Tako transport ljudi in blaga prevladuje Francija, ki ima daleč najvišjo povprečje. Ko pa pogledamo nižje po letvici se delajo razlike. Visok transport ljudi ima Velika Britanija in Finska, medtem ko ima transport blaga višji Norveška in Avstrija. Slovenija pri tem glede na svojo majhnost ima visoko povprečje pri transportu blaga. 
+Iz grafov opazimo da ima največje povprečje Francija. Ko pa pogledamo nižje po letvici se delajo razlike. Visok transport ljudi ima Velika Britanija in Finska, medtem ko ima transport blaga višji Norveška in Avstrija. Slovenija je pri tem seveda bolj na dnu, saj se tako po velikosti kot številu prebivalcev ne mora primerjati z večjimi Evropskimi državami.  
 
 
-Na spodnjem zemljevidu imam prikazane transport v železniškem prometu glede na druge evropske države. 
+Na spodnjem zemljevidu imam prikazane transport v železniškem prometu glede na druge evropske države za leto 2018. 
 
 
 
-```{r zemljevid, echo=FALSE, fig.align='center', fig.cap='Zemljevid povprečnega števila otrok v družini'}
+```{r zemljevid, echo=FALSE, fig.align='center', fig.cap='Zemljevid blagovnega prometa v letu 2018'}
 print(zemljevid_blagovnega_prometa)
 ```
+
+```{r zemljevid2, echo=FALSE, fig.align='center', fig.cap='Zemljevid potniskega prometa v letu 2018'}
+print(zemljevid_potniskega_prometa)
+```
+
 
 ***
 
@@ -147,9 +149,31 @@ print(zemljevid_blagovnega_prometa)
 ```{r analiza, echo=FALSE, message=FALSE}
 source("analiza/analiza.r", encoding="UTF-8")
 ```
+Za napredno analizo sem naredila napoved cestnega transporta za Slovenijo. 
+
+```{r graf_regresije_uvoz, echo=FALSE, message=FALSE, warning=FALSE}
+print(graf_regresije_uvoz)
+```
+
+```{r graf_regresije_izvoz, echo=FALSE, message=FALSE, warning=FALSE}
+print(graf_regresije_izvoz)
+```
+
+Uporabila sem kvadratno regresijsko funkcijo, napoved pa predstavljajo rdeče pikice, ki so postavljene linearno. 
+Predvidena je še naprej rast tako v izvozu kot v uvozu. Vendar je pri izvozu premica bolj strma, pričakujemo večje povečanje. Izvoz poveča BDP, kar pa je za Slovenijo pozitivna napoved. 
 
 
+Kot drugo pa me je zanimalo kako vpliva povečanje oz. zmanjšanje letalskega prometa na železniški promet. 
 
+```{r g, echo=FALSE, message=FALSE, warning=FALSE}
+print(g)
+```
+
+```{r g2, echo=FALSE, message=FALSE, warning=FALSE}
+print(g2)
+```
+V obeh primerih gledamo uvoz. Pri uvozu blaga je večanje letalskega transporta, povečalo tudi transport v železniškem prometu, vendar le do določeno količino tovora. Kot vidimo pri 900 (900000 ton) se krivulja začne obračat navzdol. 
+Pri uvozu potnikov pa je zgodba rano nasprotna. Povečanje letalskega prometa manjša železniški promet. Kar je logično saj je letalski promet v večini lažje dosopen in včasih na daljše razdalje tudi hitrejši. 
 ***
 
 ```{r shiny, echo=FALSE}
