--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -25,7 +25,10 @@ source("lib/rstudio.r", encoding="UTF-8")
 
 # Tema 
 
-Izbrala sem si temo o transportu. Pri tem bom primerjala transport dobrin in ljudi v železniškem, pristaniškem in letalskem prometu, pri transportu dobrin pa tudi cestni promet. Kot prvo se bom osredotočila na uvoz. Želim ugotoviti s katerim prometom pridobimo največ dobrin oziroma kako ljudje najpogosteje prihajajo v našo državo. Potem bom analizirala izvoz dobrin in ljudi, enako kot prej po panogah. Za konec bom primerjala uvoz in izvoz, želim ugotoviti koliko je Slovenija skozi leta postala samooskrbna država. Transport z vlakom bom primerjala še z drugimi evropskimi državami od leta 2010 do 2018 in podatke prikazala z grafom. 
+Izbrala sem si temo o transportu. Analizo bom prvo naredila za Slovenijo, potem pa bom primerjala tudi z drugimi Evropskimi državami. Pri tem bom primerjala transport dobrin in ljudi v železniškem, pristaniškem in letalskem prometu, pri transportu dobrin pa tudi cestni promet. Kot prvo se bom osredotočila na uvoz in izvoz. Želim ugotoviti kateri promet je prevladujoč in kolikšne razlike so med njimi. Podatke bom prikazala v grafu za vsako posebaj in potem primerjala med seboj. Gledala bom obdobje med 2010 in 2018. 
+Kot drugo, pa bom transport z vlakom primerjala še z drugimi Evropskimi državami od leta 2010 do 2018 in podatke prikazala z grafom.
+
+![](slike/transport.jpg)
 
 ***
 
@@ -38,34 +41,34 @@ source("uvoz/uvoz.r", encoding="UTF-8")
 Uvozila sem podatke o transportu v obliki CSV s Statističnega urada in Evrostata. Podatke imamo v 
 5 razpredelnicah v obliki *tidy data*.
   
-Tabela 1: Letalski potniški in blagovni promet
+Tabela 1: Letalski potniški in blagovni promet za Slovenijo
 
   - `leto` - spremenljivka: leto (število),
   - `tovor` - spremenljivka: prihod letal(uvoz) in odhod letal(izvoz) iz Slovenije (neurejen faktor),
   - `potniki` - meritev: stevilo potnikov v 1000 (stevilo),
   - `tone` - meritev: količina blaga, ki je prišlo v oz. iz Sloveinije v tonah (1000) (število).
   
-Tabela 2: Zeležniški potniški in blagovni promet
+Tabela 2: Zeležniški potniški in blagovni promet za Slovenijo
 
   - `leto` - spremenljivka: leto (število),
   - `tovor ` - spremenljivka: uvoz in izvoz blaga in ljudi (neurejen faktor),
   - `tone` - meritev: količina blaga v tonah (1000) (število),
   - `potniki` - meritev: stevilo potnikov v 1000 (stevilo).
   
-Tabela 3: Cestni blagovni promet
+Tabela 3: Cestni blagovni promet za Slovenijo 
 
   - `leto` - spremenljivka: leto (število),
   - `tovor` - spremenljivka: uvoz izvoz blaga (neurejen faktor),
   - `tone` - meritev: količina blaga v tonah (1000) (število).
   
-Tabela 4: Pristaniški potniški in blagovni promet
+Tabela 4: Pristaniški potniški in blagovni promet za Slovenijo
 
   - `leto` - spremenljivka: leto (število),
   - `tovor` - spremenljivka: uvoz in izvoz blaga in ljudi (neurejen faktor),
   - `potniki` - meritev: stevilo potnikov v 1000 (stevilo),
   - `tone` - meritev: količina blaga v tonah (1000)(število).
 
-Tabela 5: Železniški potniški in blagovni promet v primerjavi z drugimi evropskimi državami 
+Tabela 5: Železniški potniški in blagovni promet v primerjavi z drugimi Evropskimi državami 
 
   - `leto` - spremenljivka: leto (število),
   - `države` - spremenljivka: evropske države (besedilo).
@@ -74,7 +77,6 @@ Tabela 5: Železniški potniški in blagovni promet v primerjavi z drugimi evrop
   
   
 
-**Opomba**: da bi razpredelnica `obcine` res bila v obliki *tidy data*, bi morali odstraniti stolpec `gostota` (saj je izpeljan iz stolpcev `povrsina` in `prebivalci`), podatke o pokrajinah pa bi morali premakniti v drugo razpredelnico, saj nekatere občine pripadajo dvema pokrajinama. Podobno bi morali narediti tudi s stolpcem `odcepitev`.
 
 
 **Cilj**: Želim ugotoviti kako se je spreminjal transport glede na časovno obdobje med 2010 in 2018 in s tem tudi kateri transport se je z leti okrepčal. Predvidevam, da bo največ uvoženega blaga prišlo s cestnim prometom, medtem ko ljudi z letalskim. Pri izvozu pa pričakujem podobno sliko. 
@@ -89,7 +91,7 @@ Tabela 5: Železniški potniški in blagovni promet v primerjavi z drugimi evrop
 source("vizualizacija/vizualizacija.r", encoding="UTF-8")
 ```
 
-Spodnji grafi prikazujejo uvoz in izvoz blaga ter ljudi v različnih panogah. 
+Spodnji grafi prikazujejo uvoz in izvoz blaga ter ljudi v različnih panogah v Sloveniji. 
 
 ```{r graf_uvoz_blago, echo=FALSE, message=FALSE, fig.align='center', warning = FALSE}
 print(graf_uvoz_blago)
@@ -129,7 +131,7 @@ print(graf_evropa)
 Iz grafov opazimo da ima največje povprečje Francija. Ko pa pogledamo nižje po letvici se delajo razlike. Visok transport ljudi ima Velika Britanija in Finska, medtem ko ima transport blaga višji Norveška in Avstrija. Slovenija je pri tem seveda bolj na dnu, saj se tako po velikosti kot številu prebivalcev ne mora primerjati z večjimi Evropskimi državami.  
 
 
-Na spodnjem zemljevidu imam prikazane transport v železniškem prometu glede na druge evropske države za leto 2018. 
+Na spodnjem zemljevidu imam prikazane transport v železniškem prometu glede na druge Evropske države za leto 2018. 
 
 
 
@@ -173,7 +175,9 @@ print(g)
 print(g2)
 ```
 V obeh primerih gledamo uvoz. Pri uvozu blaga je večanje letalskega transporta, povečalo tudi transport v železniškem prometu, vendar le do določeno količino tovora. Kot vidimo pri 900 (900000 ton) se krivulja začne obračat navzdol. 
-Pri uvozu potnikov pa je zgodba rano nasprotna. Povečanje letalskega prometa manjša železniški promet. Kar je logično saj je letalski promet v večini lažje dosopen in včasih na daljše razdalje tudi hitrejši. 
+Pri uvozu potnikov pa je zgodba rano nasprotna. Povečanje letalskega prometa manjša železniški promet. Kar je logično, saj je letalski promet v večini lažje dostopen in včasih na daljše razdalje tudi hitrejši. 
+
+
 ***
 
 ```{r shiny, echo=FALSE}
